增加支付宝SDK的调用

--- a/project_name/static/html/支付宝.html
+++ b/project_name/static/html/支付宝.html
@@ -9,6 +9,7 @@
     <input type="text" name="price">
     <input type="submit" id="submit1" value="支付">
 </form>
+<input type="button" value="查看是否支付成功" id="btn1">
 </body>
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/my.utils.js"></script>
